--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
   <title>Landing Page</title>
 </head>
 <body>
-  
+  <header>
+    <div id="left-header"></div>
+    <div id="right-header"></div>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
 </html>
