--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,7 +12,7 @@
     <img src="public/background.jpg" alt="background" width="6000px" height="4000px">
   </div>
   <header>
-    <div id="main-header">
+    <div id="main-header" class="fadeout-header">
       <div id="left-header">
         <a href="#" class="color-red">
           <svg width="157" height="53" viewBox="0 0 157 53" fill="none" xmlns="http://www.w3.org/2000/svg">
