Add title plus fadeout

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -34,6 +34,7 @@
         </div>
       </div>
     </div>
+    <h1 id="main-title" class="fadeout-title">Dream big, live simple.</h1>
   </header>
   <main></main>
   <footer></footer>
