Create first container text

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -36,7 +36,13 @@
     </div>
     <h1 id="main-title" class="fadeout-title">Dream big, live simple.</h1>
   </header>
-  <main></main>
+  <main>
+    <div id="container-one">
+      <h4>WHAT WE DO</h4>
+      <h1>Modular cabins for simple,<br> sustainable <i>living</i>.</h1>
+      <h4>We produce high-performance, compact homes that let you escape the <br>everyday to a space that is good for you and good for the planet.</h4>
+    </div>
+  </main>
   <footer></footer>
 </body>
 </html>
