Create initial two grid under first house image

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -41,6 +41,13 @@
       <h4>WHAT WE DO</h4>
       <h1>Modular cabins for simple,<br> sustainable <i>living</i>.</h1>
       <h4>We produce high-performance, compact homes that let you escape the <br>everyday to a space that is good for you and good for the planet.</h4>
+      <div id="one-house">
+        <img src="public/home1.jpg" alt="image of a winter house" width="2560px" height="1707px">
+      </div>
+      <div class="two-grid">
+        <p>Your base camp, no matter your <i>mountain</i>.</p>
+        <p>Built to go virtually anywhere, our models are the starting and end point for all your adventures.</p>
+      </div>
     </div>
   </main>
   <footer></footer>
