Add linebreak to text

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -45,7 +45,7 @@
         <img src="public/home1.jpg" alt="image of a winter house" width="2560px" height="1707px">
       </div>
       <div class="two-grid">
-        <p>Your base camp, no matter your <i>mountain</i>.</p>
+        <p>Your base camp,<br> no matter your <i>mountain</i>.</p>
         <p>Built to go virtually anywhere, our models are the starting and end point for all your adventures.</p>
       </div>
     </div>
